# eightqueens

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh  test.sh
.github/workflows/: cmake.yml
include/: board.h  queen.h  safe.h
src/: main.cc
test/: boardtest.cc  queentest.cc  viewtest.cc
